# shifuDevTest

./: README.md
iot_driver_copilot/ambient_temp_humidity_sensor/: config.go  main.go  modbus.go
iot_driver_copilot/ambient_temperature_and_humidity_sensor/: README.md  config.go  driver.go  go.mod
iot_driver_copilot/industrial_emperature_r_humidity_sensor/: README.md  config.go  driver.go  go.mod
iot_driver_copilot/industrial_environmental_sensor/: Dockerfile  README.md  driver.cpp  go.mod
iot_driver_copilot/industrial_environmental_sensor_model_x_100/: Dockerfile  Makefile  README.md  driver.cpp  go.mod
iot_driver_copilot/industrial_io_t_edge_data_acquisition_module/: README.md  config.go  config.js  device.go  driver.go  go.mod  http_server.go  index.js  main.go  mqtt.go  package.json
iot_driver_copilot/industrial_io_t_edge_data_acquisition_module__11/: README.md  collector.go  config.go  go.mod  main.go
iot_driver_copilot/industrial_io_t_edge_data_acquisition_module__1122/: AcquisitionService.java  Config.java  HttpServerApp.java  Logging.java  MQTTClient.java  Main.java  ModbusTCPClient.java  README.md
iot_driver_copilot/industrial_temperature_&_humidity_sensor_(modbus_rtu)/: Dockerfile
iot_driver_copilot/industrial_temperature_humidity_sensor/: Dockerfile
iot_driver_copilot/industrial_test/: Dockerfile  README.md  config.py  driver.cpp  (+2 more)
iot_driver_copilot/industrial_test_2/: CMakeLists.txt  Dockerfile  Makefile  README.md  config.cpp  config.h  driver.cpp  http_server.cpp  http_server.h  modbus_rtu.cpp  modbus_rtu.h  serial_port.cpp  serial_port.h
(+76 files in other folders)
